<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_pintor1"
            android:title="@string/menu_pintor" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_martillo"
            android:title="@string/menu_escultor" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_laboratorio"
            android:title="@string/menu_cientifico" />
        <item
            android:id="@+id/nav_inventor"
            android:icon="@drawable/ic_inventor"
            android:title="@string/menu_inventor" />
    </group>
</menu>