<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.studium.davinciapp.ui.home.HomeFragment"
        android:label="@string/menu_pintor"
        tools:layout="@layout/fragment_pintor" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="es.studium.davinciapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_escultor"
        tools:layout="@layout/fragment_escultor" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="es.studium.davinciapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_cientifico"
        tools:layout="@layout/fragment_cientifico" />

    <fragment
        android:id="@+id/nav_inventor"
        android:name="es.studium.davinciapp.ui.Inventor.inventor"
        android:label="@string/menu_inventor"
        tools:layout="@layout/fragment_inventor" />
</navigation>