<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_alta"
        android:iconTint="@color/negro"
        android:orderInCategory="100"
        android:title="@string/action_alta"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_baja"
        android:iconTint="@color/negro"
        android:orderInCategory="100"
        android:title="@string/action_baja"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_modificacion"
        android:iconTint="@color/negro"
        android:orderInCategory="100"
        android:title="@string/action_modificacion"
        app:showAsAction="never" />
</menu>